--- a/_posts/2016-07-01-profile-Norman-Borlaug.html
+++ b/_posts/2016-07-01-profile-Norman-Borlaug.html
@@ -3,7 +3,7 @@ layout: compress
 title: "Dr. Norman Borlaug"
 date: 2016-07-01
 excerpt: "Profile of Dr. Norman Borlaug."
-tags:
+tag:
 - Walter
 - Free Code Camp
 project: true
