--- a/_posts/2016-07-14-about.html
+++ b/_posts/2016-07-14-about.html
@@ -2,9 +2,11 @@
 layout: compress
 title: "About Me"
 date: 2016-07-14
-tags:
+tag:
 - Walter
 - Free Code Camp
+excerpt: "Code as about.me site"
+project: true
 ---
 <!DOCTYPE html>
 <style>
