[About] background size change with height

--- a/_posts/2016-07-14-about.html
+++ b/_posts/2016-07-14-about.html
@@ -13,7 +13,7 @@ project: true
 body {
     background-image: url("http://o8c8x14zj.bkt.clouddn.com/cat.jpg");
     background-repeat: no-repeat;
-    background-size: 66% auto;
+    background-size: auto 117%;
 }
 
 .btn-clarity {
