--- a/_posts/2016-07-14-about.html
+++ b/_posts/2016-07-14-about.html
@@ -10,10 +10,14 @@ project: true
 ---
 <!DOCTYPE html>
 <style>
+html, body {
+    height: 100%;
+}
+
 body {
     background-image: url("http://o8c8x14zj.bkt.clouddn.com/cat.jpg");
     background-repeat: no-repeat;
-    background-size: auto 117%;
+    background-size: cover;
 }
 
 .btn-clarity {
@@ -61,7 +65,7 @@ dl {
 
                         <br />
 
-                        <a href="http://ohmyselina.net/" class="btn btn-grey btn-lg">
+                        <a href="/" class="btn btn-grey btn-lg">
                             <span class="glyphicon glyphicon-home" aria-hidden="true"></span> &nbsp;<strong>Read my blog</strong>
                         </a>
 
