mv img to assets

--- a/_posts/2016-07-14-about.html
+++ b/_posts/2016-07-14-about.html
@@ -21,7 +21,7 @@ project: true
             }
             
             body {
-                background-image: "winter.jpg";
+                background-image: url("assets/img/winter.jpg");
                 background-repeat: no-repeat;
                 background-size: cover;
             }
