--- a/_posts/2017-12-15-calculagraph.html
+++ b/_posts/2017-12-15-calculagraph.html
@@ -18,7 +18,7 @@ project: true
     <title>Calculagraph</title>
     <style>
         body {
-            background-image: url("winter.jpg");
+            background-image: url("assets/img/winter.jpg");
             background-size: cover;
             background-repeat: no-repeat;
             font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
