--- a/_posts/2017-12-15-calculagraph.html
+++ b/_posts/2017-12-15-calculagraph.html
@@ -20,6 +20,7 @@ project: true
         body {
             background-image: url("../assets/img/winter.jpg");
             background-size: cover;
+            background-position: center;
             background-repeat: no-repeat;
             font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
             font-size: 26px;
