--- a/_posts/2017-12-15-calculagraph.html
+++ b/_posts/2017-12-15-calculagraph.html
@@ -19,9 +19,10 @@ project: true
     <style>
         body {
             background-image: url("../assets/img/winter.jpg");
-            background-size: cover;
-            background-position: center;
             background-repeat: no-repeat;
+            background-size: cover;
+            background-position: center center;
+            background-attachment: fixed;
             font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
             font-size: 26px;
             color: white;
@@ -84,10 +85,12 @@ project: true
     </style>
 </head>
 <body>
-    <div id="center-box">
-        <p id="left">It's been </p>
-        <p id="date-since-met"></p>
-        <p id="right"> since we met...</p>
+    <div id="content">
+        <div id="center-box">
+            <p id="left">It's been </p>
+            <p id="date-since-met"></p>
+            <p id="right"> since we met...</p>
+        </div>
     </div>
 
     <script>
