--- a/_posts/2017-12-15-calculagraph.html
+++ b/_posts/2017-12-15-calculagraph.html
@@ -21,7 +21,7 @@ project: true
             background-image: url("../assets/img/winter.jpg");
             background-repeat: no-repeat;
             background-size: cover;
-            background-position: center center;
+            /* background-position: center center; */
             background-attachment: fixed;
             font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
             font-size: 26px;
