--- a/_posts/2017-12-15-calculagraph.html
+++ b/_posts/2017-12-15-calculagraph.html
@@ -23,7 +23,7 @@ project: true
             background-size: cover;
             background-attachment: fixed;
             background-position: center;
-            
+            min-height: 100%;
             font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
             font-size: 26px;
             color: white;
