--- a/_posts/2017-12-15-calculagraph.html
+++ b/_posts/2017-12-15-calculagraph.html
@@ -20,10 +20,12 @@ project: true
         body {
             background-image: url("../assets/img/winter.jpg");
             background-repeat: no-repeat;
-            background-size: cover;
             background-attachment: fixed;
-            background-position: center;
-            min-height: 100%;
+            background-position: center center;
+            background-size: cover;
+            -webkit-background-size: cover;
+            -moz-background-size: cover;
+            -o-background-size: cover;
             font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
             font-size: 26px;
             color: white;
