--- a/_posts/2017-12-15-calculagraph.html
+++ b/_posts/2017-12-15-calculagraph.html
@@ -22,10 +22,12 @@ project: true
             background-repeat: no-repeat;
             background-attachment: fixed;
             background-position: center center;
-            background-size: cover;
             -webkit-background-size: cover;
             -moz-background-size: cover;
             -o-background-size: cover;
+            background-size: cover;
+            height: 100%;
+            overflow: hidden;
             font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
             font-size: 26px;
             color: white;
