--- a/_posts/2017-12-15-calculagraph.html
+++ b/_posts/2017-12-15-calculagraph.html
@@ -17,7 +17,7 @@ project: true
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Calculagraph</title>
     <style>
-        body {
+        html {
             background-image: url("../assets/img/winter.jpg");
             background-repeat: no-repeat;
             background-attachment: fixed;
@@ -28,6 +28,9 @@ project: true
             background-size: cover;
             height: 100%;
             overflow: hidden;
+        }
+
+        body {
             font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
             font-size: 26px;
             color: white;
